# FreetypeDemo

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/freetypedemo/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml  CMakeLists.txt
app/src/main/cpp/: Log.h  native-lib.cpp
app/src/main/java/com/example/freetypedemo/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/example/freetypedemo/: ExampleUnitTest.java
freetype/: build.gradle
freetype/src/main/: AndroidManifest.xml  CMakeLists.txt
freetype/src/main/cpp/: native-lib.cpp
freetype/src/main/cpp/freetype-2/10/4/jni/: Android.mk  Application.mk
freetype/src/main/cpp/freetype-2/10/4/jni/builds/unix/: config.status  libtool
freetype/src/main/java/com/example/freetypelib/: MainActivity.java
gradle/wrapper/: gradle-wrapper.properties
